--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos de DevOps da Alura -- Em Andamento --</title>
+    <title>Lista de Cursos de DevOps da Alura Em Andamento</title>
 </head>
 <body>
     <ul>
-        <li>Vagrant: Gerenciando máquinas virtuais</li>
+        <li>Vagrant</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-        <li>Kubernetes</li>
     </ul>
 </body>
 </html>
